fixed: when question has created this was return a empty array with options, and this was save an empty row in db and option in db
